@@ -9,6 +9,7 @@ Version 0.2.rc1
 - Improved: Hide "Default address" checkboxes for guests
 - Fixed: FE_USER_LOGGED_IN might be true but no user available (Ticket #213)
 - Fixed: Email language was not correctly detected under certain circumstances
+- Fixed: Potential database caching issue in ePay payment modules
 
 Version 0.2.beta2 (2010-09-27)
 ------------------------------
